--- a/Python/Basics of Python.ipynb
+++ b/Python/Basics of Python.ipynb
@@ -18,7 +18,7 @@
     }
    ],
    "source": [
-    "\"\"\" Python has the following data types built-in by default, in these categories:\n",
+    "\"\"\" has the following data types built-in by default, in these categories:\n",
     "Text Type:\tstr\n",
     "Numeric Types:\tint, float, complex\n",
     "Sequence Types:\tlist, tuple, range\n",
