--- a/Python/Web Scraping/Scraping Data on Largest Companies in the United States by Revenue (Top 100) from Wikipedia.ipynb
+++ b/Python/Web Scraping/Scraping Data on Largest Companies in the United States by Revenue (Top 100) from Wikipedia.ipynb
@@ -8980,7 +8980,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(r'C:\\Users\\hp\\Desktop\\Alex The Analyst\\Python\\Exercises\\Inspecting and Scraping Webpage\\Scrapped Data.csv', index = False)"
+    "df.to_csv(r'your_file_path', index = False)"
    ]
   }
  ],
