Reading in Files.ipynb

--- a/Python/pandas/Reading in Files.ipynb
+++ b/Python/pandas/Reading in Files.ipynb
@@ -34,7 +34,7 @@
    "outputs": [],
    "source": [
     "# Considering that the csv file has no headers\n",
-    "# pd.read_csv(r\"C:\\Users\\hp\\Desktop\\Alex The Analyst\\Python\\Exercises\\pandas\\Reading files\\countries of the world.csv\", header = None, names = ['Country', 'Region'])"
+    "# pd.read_csv(r\"your_file_path", header = None, names = ['Country', 'Region'])"
    ]
   },
   {
