Reading in Files.ipynb

--- a/Python/pandas/Reading in Files.ipynb
+++ b/Python/pandas/Reading in Files.ipynb
@@ -34,7 +34,7 @@
    "outputs": [],
    "source": [
     "# Considering that the csv file has no headers\n",
-    "# pd.read_csv(r\"C:\\Users\\hp\\Desktop\\Alex The Analyst\\Python\\Exercises\\pandas\\Reading files\\countries of the world.csv\", header = None, names = ['Country', 'Region'])"
+    "# pd.read_csv(r\"your_file_path\", header = None, names = ['Country', 'Region'])"
    ]
   },
   {
@@ -154,7 +154,7 @@
    "source": [
     "# Importing csv file\n",
     "# Reading the file as literal string (raw values)\n",
-    "df = pd.read_csv(r\"C:\\Users\\hp\\Desktop\\Alex The Analyst\\Python\\Exercises\\pandas\\Reading files\\countries of the world.csv\")\n",
+    "df = pd.read_csv(r\"your_file_path\")\n",
     "df"
    ]
   },
@@ -282,7 +282,7 @@
    ],
    "source": [
     "# Reading the text file using csv\n",
-    "df = pd.read_csv(r\"C:\\Users\\hp\\Desktop\\Alex The Analyst\\Python\\Exercises\\pandas\\Reading files\\countries of the world.txt\", sep = '\\t')\n",
+    "df = pd.read_csv(r\"your_file_path.txt\", sep = '\\t')\n",
     "df"
    ]
   },
@@ -401,7 +401,7 @@
     }
    ],
    "source": [
-    "df = pd.read_table(r\"C:\\Users\\hp\\Desktop\\Alex The Analyst\\Python\\Exercises\\pandas\\Reading files\\countries of the world.txt\")\n",
+    "df = pd.read_table(r\"your_file_path.txt\")\n",
     "df"
    ]
   },
@@ -563,7 +563,7 @@
     }
    ],
    "source": [
-    "df = pd.read_json(r\"C:\\Users\\hp\\Desktop\\Alex The Analyst\\Python\\Exercises\\pandas\\Reading files\\json_sample.json\")\n",
+    "df = pd.read_json(r\"your_file_path.json\")\n",
     "df"
    ]
   },
@@ -909,7 +909,7 @@
     }
    ],
    "source": [
-    "df = pd.read_excel(r\"C:\\Users\\hp\\Desktop\\Alex The Analyst\\Python\\Exercises\\pandas\\Reading files\\world_population_excel_workbook.xlsx\")\n",
+    "df = pd.read_excel(r\"your_file_path.xlsx\")\n",
     "df"
    ]
   },
@@ -1053,7 +1053,7 @@
    ],
    "source": [
     "# Reading specific excel sheet\n",
-    "df2 = pd.read_excel(r\"C:\\Users\\hp\\Desktop\\Alex The Analyst\\Python\\Exercises\\pandas\\Reading files\\world_population_excel_workbook.xlsx\", sheet_name = 'Sheet1')\n",
+    "df2 = pd.read_excel(r\"your_file_path.xlsx\", sheet_name = 'Sheet1')\n",
     "df2"
    ]
   },
