--- a/Python/pandas/Filtering and Ordering.ipynb
+++ b/Python/pandas/Filtering and Ordering.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(r\"C:\\Users\\hp\\Desktop\\Alex The Analyst\\Python\\Exercises\\pandas\\world_population.csv\")"
+    "df = pd.read_csv(r\"your_file_path")"
    ]
   },
   {
