--- a/Python/pandas/Indexing in Pandas.ipynb
+++ b/Python/pandas/Indexing in Pandas.ipynb
@@ -352,7 +352,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(r\"you_file_path")\n",
+    "df = pd.read_csv(r\"you_file_path\")\n",
     "\n",
     "df"
    ]
