Indexing in Pandas.ipynb

--- a/Python/pandas/Indexing in Pandas.ipynb
+++ b/Python/pandas/Indexing in Pandas.ipynb
@@ -717,7 +717,7 @@
    ],
    "source": [
     "# If you know what is to be specified as index in the data\n",
-    "df = pd.read_csv(r\"C:\\Users\\hp\\Desktop\\Alex The Analyst\\Python\\Exercises\\pandas\\world_population.csv\", index_col = \"Country\")\n",
+    "df = pd.read_csv(r\"your_file_path\")\n",
     "\n",
     "df"
    ]
