Group by and Aggregating.ipynb

--- a/Python/pandas/Group by and Aggregating.ipynb
+++ b/Python/pandas/Group by and Aggregating.ipynb
@@ -169,7 +169,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(r\"C:\\Users\\hp\\Desktop\\Alex The Analyst\\Python\\Exercises\\pandas\\Flavors.csv\")\n",
+    "df = pd.read_csv(r\"your_file_path\")\n",
     "\n",
     "df"
    ]
