Merge, Join and Concatenate.ipynb

--- a/Python/pandas/Merge, Join and Concatenate.ipynb
+++ b/Python/pandas/Merge, Join and Concatenate.ipynb
@@ -93,7 +93,7 @@
     }
    ],
    "source": [
-    "df1 = pd.read_csv(r\"C:\\Users\\hp\\Desktop\\Alex The Analyst\\Python\\Exercises\\pandas\\LOTR.csv\")\n",
+    "df1 = pd.read_csv(r\"your_file_path\")\n",
     "\n",
     "df1"
    ]
@@ -180,7 +180,7 @@
     }
    ],
    "source": [
-    "df2 = pd.read_csv(r\"C:\\Users\\hp\\Desktop\\Alex The Analyst\\Python\\Exercises\\pandas\\LOTR 2.csv\")\n",
+    "df2 = pd.read_csv(r\"your_file_path\")\n",
     "\n",
     "df2"
    ]
