Visualizations in Pandas.ipynb

--- a/Python/pandas/Visualizations in Pandas.ipynb
+++ b/Python/pandas/Visualizations in Pandas.ipynb
@@ -124,7 +124,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(r\"C:\\Users\\hp\\Desktop\\Alex The Analyst\\Python\\Exercises\\pandas\\Ice Cream Ratings.csv\")\n",
+    "df = pd.read_csv(r\"your_file_path\")\n",
     "df"
    ]
   },
