--- a/Python/pandas/Data Cleaning in Pandas.ipynb
+++ b/Python/pandas/Data Cleaning in Pandas.ipynb
@@ -368,7 +368,7 @@
     }
    ],
    "source": [
-    "df = pd.read_excel(r\"C:\\Users\\hp\\Desktop\\Alex The Analyst\\Python\\Exercises\\pandas\\Customer Call List.xlsx\")\n",
+    "df = pd.read_excel(r\"your_file_path\")\n",
     "df"
    ]
   },
