Exploratory Data Analysis in Pandas.ipynb

--- a/Python/pandas/Exploratory Data Analysis in Pandas.ipynb
+++ b/Python/pandas/Exploratory Data Analysis in Pandas.ipynb
@@ -356,7 +356,7 @@
    ],
    "source": [
     "# Reading the csv file\n",
-    "df = pd.read_csv(r\"C:\\Users\\hp\\Desktop\\Alex The Analyst\\Python\\Exercises\\pandas\\world_population_revised.csv\")\n",
+    "df = pd.read_csv(r\"your_file_path\")\n",
     "df"
    ]
   },
